# libtremotesf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  addressutils.cpp  addressutils.h  demangle.cpp  demangle.h  demangle_test.cpp  fileutils.cpp  fileutils.h  formatters.cpp  formatters.h  itemlistupdater.h  itemlistupdater_test.cpp  jsonutils.h  libtremotesf.pro  literals.h  log.cpp  log.h  log_test.cpp  pathutils.cpp  pathutils.h  pathutils_test.cpp  peer.cpp  peer.h  println.h  println_test.cpp  requestrouter.cpp  requestrouter.h  requestrouter_test.cpp  rpc.cpp  rpc.h  serversettings.cpp  serversettings.h  serverstats.cpp  serverstats.h  stdutils.h  target_os.h  torrent.cpp  (+8 more)
.github/workflows/: Vagrantfile  main.yml  vagrant-freebsd-shell.sh
.reuse/: dep5
cmake/: CommonOptions.cmake
jni/: jnirpc.cpp  jnirpc.h  libtremotesf_wrap.cxx  libtremotesf_wrap.h
jni/java/org/equeim/libtremotesf/: JniRpc.java  libtremotesfJNI.java
vcpkg-windows-overlay-triplets/: x64-windows-static.cmake
